# SSE-v0.1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SSE_updates.md  UI_SPECIFICATION.md  pyproject.toml  readme_md_sse_minimal_runnable_prototype_v_0.md  sqc_srl_v_0_1_strategic_reasoning_layer_spec.md
frontend/: about.html  app.js  create-profile.html  index.html  profile.html  profile.js  profiles.css  profiles.html  profiles.js  styles.css  tracking-detail.html  tracking-detail.js  tracking.css  tracking.html  tracking.js
sse/: __init__.py
sse/api/: __main__.py  app.py
sse/contracts/: __init__.py  prediction.py
sse/data/: tracking_store.json
sse/demo/: __init__.py  __main__.py  examples.py
sse/ess/: __init__.py  snapshot.py
sse/explainer/: __init__.py  explainer.py
sse/mcm/: __init__.py  priors.py
sse/orchestrator/: __init__.py  pipeline.py
sse/profiles/: __init__.py  store.py
sse/sqc/: __init__.py  engine.py  srl.py
sse/ssm/: __init__.py  mapper.py
sse/tracking/: __init__.py  store.py
tests/: test_determinism.py  test_examples.py  test_mode_inference.py  test_srl.py
